@@ -257,7 +257,7 @@ UConnection::operator<< (_Send __msg)
   if (__msg._buf != 0)
   {
     UErrorValue ret = sendc_ (__msg._buf, __msg._buflen).error ();
-    free (const_cast<void*> (reinterpret_cast <const void*> (__msg._buf)));
+    delete [] __msg._buf;
 
     if (__msg._flush && ret != UFAIL)
       flush ();
